<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akashahmed.puriappv2.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="Puri Application"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />
    <Button
        android:id="@+id/decrease"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="125dp"
        android:text="@string/minus"
        android:onClick="countDE"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/increase"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/puri_count"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/mama1"
        android:layout_toRightOf="@+id/mama1"
        android:gravity="center"
        android:onClick="countIN"
        android:text="@string/plus"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/puri_count"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/press"
        android:layout_alignStart="@+id/press"
        android:layout_alignTop="@+id/decrease"
        android:gravity="center"
        android:textColor="#00e"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/mama1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:buttonTint="@color/colorPrimary"
        android:checked="false"
        android:duplicateParentState="false"
        android:gravity="center"
        android:onClick="selectItem"
        android:text="@string/mama1"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/mama2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:onClick="selectItem"
        android:text="@string/mama2"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/mama3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:checked="false"
        android:gravity="center"
        android:onClick="selectItem"
        android:text="@string/mama3"
        android:textSize="25sp" />

    <Button
        android:id="@+id/press"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:textSize="20sp"
        android:text="@string/Next"
        android:textColor="#00e"
        android:onClick="finalSelection"
        android:textStyle="bold"
        />

</RelativeLayout>
